banner-section added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <h1>Start mission</h1>
+    <header>
+      <section class="banner-section">
+        <div class="details">
+          <h1>Stay Focus on <span> mission 2024</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            facere placeat dolorem ipsum voluptates reiciendis id est illum
+            autem enim.
+          </p>
+          <button class="btn">Explore now</button>
+          <p class="direction">scroll down to explore more about us.</p>
+        </div>
+        <div class="image-site">
+          <img src="./images/person/person-1.png" alt="" />
+        </div>
+      </section>
+    </header>
+    <main class="main">
+      <h1 class="title">My Mission in <span>2024</span></h1>
+      <section class="mission-cards">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </section>
+    </main>
   </body>
 </html>
