mission-section-added

--- a/index.html
+++ b/index.html
@@ -27,9 +27,30 @@
     <main class="main">
       <h1 class="title">My Mission in <span>2024</span></h1>
       <section class="mission-cards">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+          <img src="./images/illustrators/illustrator-1.png" alt="" />
+          <h2>Mission</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+            accusantium dignissimos, vero numquam expedita dolorem?
+          </p>
+        </div>
+        <div class="card card-color">
+          <img src="./images/illustrators/illustrator-2.png" alt="" />
+          <h2>Vission</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum
+            pariatur totam aperiam eius natus non?
+          </p>
+        </div>
+        <div class="card card-color-2">
+          <img src="./images/illustrators/illustrator-3.png" alt="" />
+          <h2>Goal</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+            alias ullam quidem nostrum asperiores amet!
+          </p>
+        </div>
       </section>
     </main>
   </body>
