develop section added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
           </p>
         </div>
       </section>
+      <section class="develop-section">
+        <div class="img-section">
+          <img src="./images/pictures/coding.png" alt="" />
+          <div class="shape-1">
+            <img src="./images/shapes/shape-1.png" alt="" />
+          </div>
+        </div>
+        <div class="detail-section">
+          <h1>Develop <br> withouts limit.</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet
+            consequatur rerum vero exercitationem aspernatur voluptatem numquam
+            ea possimus cupiditate dolor commodi incidunt similique reiciendis,
+            rem est molestias laborum impedit repellendus?
+          </p>
+          <button class="btn">read the Documentation</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
