corona section-added

--- a/index.html
+++ b/index.html
@@ -60,12 +60,62 @@
           </div>
         </div>
         <div class="detail-section">
-          <h1>Develop <br> withouts limit.</h1>
+          <h1>
+            Develop <br />
+            withouts limit.
+          </h1>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet
             consequatur rerum vero exercitationem aspernatur voluptatem numquam
             ea possimus cupiditate dolor commodi incidunt similique reiciendis,
             rem est molestias laborum impedit repellendus?
+          </p>
+          <button class="btn">read the Documentation</button>
+        </div>
+      </section>
+      <section class="community-section">
+        <div class="community-details">
+          <h1>
+            Know our <br />
+            global Community
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint alias
+            aperiam labore consequuntur totam sapiente quod harum suscipit eos
+            quo.
+          </p>
+          <button class="btn">read our Documentation</button>
+        </div>
+        <div class="community-img">
+          <img src="./images/pictures/project.png" alt="" />
+          <div class="shape-2">
+            <img src="./images/shapes/shape-1.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <h1 class="title-2">Build <span>Corona application</span></h1>
+      <section class="application-area">
+        <div class="application-img">
+          <img src="./images/pictures/app.png" alt="" />
+          <div class="shape-3">
+            <img src="./images/shapes/shape-3.png" alt="" />
+          </div>
+          <div class="shape-4">
+            <img src="./images/shapes/shape-3.png" alt="" />
+          </div>
+          <div class="shape-5">
+            <img src="./images/shapes/shape-3.png" alt="" />
+          </div>
+        </div>
+        <div class="application-details">
+          <h1>
+            stay safe with <br />
+            gocorona
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+            inventore aliquid similique voluptates eum! Ipsam earum laudantium
+            tenetur corrupti labore!
           </p>
           <button class="btn">read the Documentation</button>
         </div>
