--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </section>
     </main>
     <footer>
-      <h1>this is footer</h1>
+      <h1>Mission-2024</h1>
     </footer>
   </body>
 </html>
